[package]
name = "feb"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.10"
